@@ -7,6 +7,8 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.time.Duration;
+import java.time.Instant;
 import java.util.*;
 
 @Data
@@ -31,7 +33,9 @@ public class User implements UserDetails {
     private String telephone;
     private String nationalite;
     private String photo;
-
+    private boolean blocked;
+    private Instant blockedTimestamp;
+    private Duration blockedDuration;
 
     @ManyToMany(cascade = CascadeType.ALL,mappedBy = "invites")
     private Set<Evenement> evenements;
@@ -44,8 +48,13 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(role.name()));
+        if (role != null) {
+            return role.getAuthorities();
+        } else {
+            return Collections.emptyList(); // or return null, depending on your use case
+        }
     }
+
 
     @Override
     public String getUsername() {
